--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -1,4 +1,4 @@
- worker_processes  1;
+worker_processes 1;
 
 events { worker_connections 1024; }
 
@@ -6,7 +6,7 @@ http {
   include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
   sendfile      on;
-  keepalive_timeout  65;
+  keepalive_timeout 65;
 
   upstream web_upstream {
     server web:3000;
@@ -30,7 +30,6 @@ http {
     location / {
       proxy_pass http://web_upstream;
       proxy_http_version 1.1;
-
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
@@ -41,14 +40,22 @@ http {
     }
 
     # ----------------------------
-    # APIs (single-origin routing)
+    # APIs with CORS
     # ----------------------------
 
     # Python API: /api/python/...
     location /api/python/ {
+      # CORS
+      add_header Access-Control-Allow-Origin '*' always;
+      add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
+      add_header Access-Control-Allow-Headers 'Content-Type, Authorization' always;
+
+      if ($request_method = OPTIONS) {
+        return 204;
+      }
+
       proxy_pass http://api_python_upstream/;
       proxy_http_version 1.1;
-
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
@@ -56,19 +63,25 @@ http {
 
     # Java API: /api/java/...
     location /api/java/ {
+      # CORS
+      add_header Access-Control-Allow-Origin '*' always;
+      add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
+      add_header Access-Control-Allow-Headers 'Content-Type, Authorization' always;
+
+      if ($request_method = OPTIONS) {
+        return 204;
+      }
+
       proxy_pass http://api_java_upstream/;
       proxy_http_version 1.1;
-
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Optional: quick health for nginx itself
     location = /healthz {
       return 200 "ok\n";
       add_header Content-Type text/plain;
     }
   }
 }
-
