--- a/apps/api-python/raglab-api-python/requirements.txt
+++ b/apps/api-python/raglab-api-python/requirements.txt
@@ -1,4 +1,9 @@
-fastapi==0.115.6
-uvicorn[standard]==0.32.1
-pydantic==2.10.4
-psycopg[binary]==3.2.3
+fastapi>=0.110
+uvicorn[standard]>=0.29
+
+pydantic>=2.6
+psycopg[binary]>=3.1
+
+openai>=1.12
+
+python-dotenv>=1.0
