--- a/apps/api-java/api/pom.xml
+++ b/apps/api-java/api/pom.xml
@@ -57,6 +57,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- OpenAI Java SDK -->
+		<dependency>
+			<groupId>com.openai</groupId>
+			<artifactId>openai-java</artifactId>
+			<version>0.17.0</version>
+		</dependency>
+
 		<!-- Dev reload (optional) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
