--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     environment:
       DATABASE_URL: postgres://raglab:raglab@db:5432/raglab
       RAGLAB_BACKEND: python
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
     depends_on:
       db:
         condition: service_healthy
@@ -51,8 +52,8 @@ services:
     build:
       context: ./apps/web/raglab
       args:
-        NEXT_PUBLIC_API_PY_BASE_URL: http://localhost/api/python
-        NEXT_PUBLIC_API_JAVA_BASE_URL: http://localhost/api/java
+        PY_API_BASE_URL: http://localhost/api/python
+        JAVA_API_BASE_URL: http://localhost/api/java
     depends_on:
       - api-python
       - api-java
