--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,9 @@ services:
       args:
         PY_API_BASE_URL: http://localhost/api/python
         JAVA_API_BASE_URL: http://localhost/api/java
+    environment:
+      PY_API_BASE_URL: http://localhost/api/python
+      JAVA_API_BASE_URL: http://localhost/api/java
     depends_on:
       - api-python
       - api-java
