--- a/apps/api-java/api/pom.xml
+++ b/apps/api-java/api/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>4.0.1</version>
-		<relativePath/>
+		<relativePath />
 		<!-- lookup parent from repository -->
 	</parent>
 	<groupId>io.raglab</groupId>
@@ -58,10 +59,11 @@
 		</dependency>
 
 		<!-- OpenAI Java SDK -->
-		<dependency>
+			<dependency>
 			<groupId>com.openai</groupId>
 			<artifactId>openai-java</artifactId>
-			<version>0.17.0</version>
+			<version>4.17.0</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<!-- Dev reload (optional) -->
@@ -71,7 +73,8 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-
+		<!-- Source: https://mvnrepository.com/artifact/com.openai/openai-java -->
+	
 		<!-- Tests -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
