--- a/apps/web/raglab/Dockerfile
+++ b/apps/web/raglab/Dockerfile
@@ -30,7 +30,7 @@ ENV JAVA_API_BASE_URL=$JAVA_API_BASE_URL
 # Next.js runtime needs these
 COPY --from=builder /app/package.json ./
 COPY --from=builder /app/next.config.* ./
-COPY --from=builder /app/public ./public
+#COPY --from=builder /app/public ./public
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
 
